# ALMA

./: .gitignore  README.md
Code/: Augment.py  CreateDataset.py  fitsJ.ipynb
Code/Alexander/: .gitignore
Code/Alexander/alma-local/: pyproject.toml
Code/Alexander/alma-local/alma_local/: AI.py  fitsJ.py  pyrightconfig.json
Code/Alexander/cnn-pytorch/: pyproject.toml  pyrightconfig.json
Code/Alexander/cnn-pytorch/cnn_pytorch/: atest.py  experimental.py  generate_data.py  main.py  old_main.py
Code/Alexander/image-processing/: pyproject.toml  pyrightconfig.json
Code/Alexander/image-processing/cmaps/: CMAPS.md
Code/Alexander/image-processing/image_processing/: CreateDataset.py  create_dataset.py  main.py
Code/Alexander/image-processing/image_processing/app_data/output/: .gitkeep
Code/Eilas/: augment.py  fits2png copy.py  fits2png.py  fits_standard.py
Code/Erik/: downloadData.py  mineNFits.py
Code/Erik/Alminer/: cnnFits.ipynb  constants_copy.py  download_data.py  mine_n_fits.py  minefits.py
Code/Erik/data/interstellar_medium_ism/: member.uid___A001_X133f_X2fa.Ref_090_SMC_SWBar_sci.spw16_18_20_22.cont.I.pbcor.fits
Code/Jens/: CNNTemp.py
Code/Peter/: CNNfits.ipynb  augment.ipynb  clustar.ipynb  fitsJ.ipynb  init_modules.py  main.py
Code/Peter/data/test_pos/: b335_2017_band6_0.fits
Code/data/eval/: annotations.csv
Code/data/train/: annotations.csv  hh212_2016_band7_1.fits
SEEX15-Borta-med-vinden/: ALMA_statistics.py  FittingData.py  README.md  alminer_extensions.py  keysearchmod.py  main.py  molecules.csv
Test/: test.py
(+77 files in other folders)
